--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/animations": "~15.2.9",
+    "@angular/common": "~15.2.9",
+    "@angular/compiler": "~15.2.9",
+    "@angular/core": "~15.2.9",
+    "@angular/forms": "~15.2.9",
+    "@angular/platform-browser": "~15.2.9",
+    "@angular/platform-browser-dynamic": "~15.2.9",
+    "@angular/router": "~15.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
@@ -25,9 +29,10 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "^16.2.0",
+    "@angular-devkit/build-angular": "~15.2.9",
+    "@angular/cli": "~15.2.9",
+    "@angular/compiler-cli": "~15.2.9",
+    "@angular/localize": "~15.2.9",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.19",
     "@types/lodash": "^4.14.198",
@@ -37,6 +42,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "<5.0"
   }
 }
